# coursework-api-notes

./: .env  .env.sample  Dockerfile  docker-compose.yml  main.py  pyproject.toml  security.py  settings.py
app/: main.py
app/controllers/: note.py  tag.py  user.py
app/database/: base_crud.py  database.py
app/dto/: note_dto.py  user_dto.py
app/migrations/: env.py
app/models/: notes.py  users.py
app/services/: note.py  tag.py  user.py
controllers/: __init__.py  note.py  ping.py  tag.py  user.py
dto/: note_dto.py  tag_dto.py  user_dto.py
migrations/: env.py
migrations/versions/: 2d8a65ad5a39_first_migration.py
models/: __init__.py  notes.py  users.py
services/: note.py  tag.py
