[tool.poetry]
name = "api-note"
version = "0.1.0"
description = ""
authors = ["Vaceslav Holin <vaceslavupcotc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.17"
openpyxl = "^3.1.2"
python-jose = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
